mobile screen width overflow fixed

--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,7 @@ textarea {
 body {
   background-color: var(--body-color);
   color: var(--text-color);
+  overflow-x: hidden;
 }
 
 h1,
